--- a/manuscript-materials/tex/multigraph-refs.bib
+++ b/manuscript-materials/tex/multigraph-refs.bib
@@ -508,3 +508,22 @@ CONCLUSIONS: We carry out careful validation of our IBM against comparable mathe
 	pages = {1346--1355},
 	file = {Full Text PDF:/home/alexander/.zotero/zotero/sd5x9ptu.default/zotero/storage/RDHTF28U/Kevrekidis et al. - 2004 - Equation-free The computer-aided analysis of comp.pdf:application/pdf;Snapshot:/home/alexander/.zotero/zotero/sd5x9ptu.default/zotero/storage/7R4WVP52/abstract.html:text/html}
 }
+
+@article{kattis_modeling_2016,
+	title = {Modeling epidemics on adaptively evolving networks: {A} data-mining perspective},
+	volume = {7},
+	issn = {2150-5594},
+	shorttitle = {Modeling epidemics on adaptively evolving networks},
+	url = {http://dx.doi.org/10.1080/21505594.2015.1121357},
+	doi = {10.1080/21505594.2015.1121357},
+	abstract = {The exploration of epidemic dynamics on dynamically evolving (“adaptive”) networks poses nontrivial challenges to the modeler, such as the determination of a small number of informative statistics of the detailed network state (that is, a few “good observables”) that usefully summarize the overall (macroscopic, systems-level) behavior. Obtaining reduced, small size accurate models in terms of these few statistical observables – that is, trying to coarse-grain the full network epidemic model to a small but useful macroscopic one – is even more daunting. Here we describe a data-based approach to solving the first challenge: the detection of a few informative collective observables of the detailed epidemic dynamics. This is accomplished through Diffusion Maps (DMAPS), a recently developed data-mining technique. We illustrate the approach through simulations of a simple mathematical model of epidemics on a network: a model known to exhibit complex temporal dynamics. We discuss potential extensions of the approach, as well as possible shortcomings.},
+	number = {2},
+	urldate = {2016-04-09},
+	journal = {Virulence},
+	author = {Kattis, Assimakis A. and Holiday, Alexander and Stoica, Ana-Andreea and Kevrekidis, Ioannis G.},
+	month = feb,
+	year = {2016},
+	pmid = {26695450},
+	pages = {153--162},
+	file = {Full Text PDF:/home/alexander/.zotero/zotero/s2zpju2t.default/zotero/storage/2QXZCWXS/Kattis et al. - 2016 - Modeling epidemics on adaptively evolving networks.pdf:application/pdf;Snapshot:/home/alexander/.zotero/zotero/s2zpju2t.default/zotero/storage/RHGEAMJA/21505594.2015.html:text/html}
+}
